# agentic-publishing-pipeline

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  work_item.md
.github/workflows/: artifact-pipeline.yml  baseline-contracts.yml  ci-core.yml  phase5-validation.yml  security.yml
assets/: README.md
config/: article_sources.yaml  milestones.json
config/graphs/: planning_benchmark_comparison.yaml
content/: README.md
docs/: AI_USAGE.md  HW3_REQUIREMENTS.md  PLAN.md  PRD.md  PRD_bibliography_and_citations.md  PRD_crewai_pipeline.md  PRD_latex_generation.md  PRD_pdf_validation.md  PROMPTS.md  SOURCES.md  TODO.md
latex_project/: README.md  macros.tex  main.tex  preamble.tex  references.bib
results/: README.md
scripts/: README.md  _milestones_core.py  _milestones_gh.py  _milestones_output.py  bootstrap_github_repo.py  build_pdf.py  check_docs_present.py  check_github_metadata.py  check_latex_structure.py  check_line_cap.py  check_markdown_links.py  check_no_secrets.py  check_phase_order.py  check_planning_ids.py  check_source_archives.py  check_workflow_permissions.py  render_latex_project.py  sync_milestones.py
submission/: README.md
tests/: conftest.py  test_ci_scripts.py  test_line_cap.py  test_milestone_apply.py  test_milestone_cli.py  test_milestone_diff.py  test_milestone_gh_adapter.py  test_milestone_manifest.py  test_milestone_pagination.py  test_milestone_verify.py  test_scaffold.py
(+273 files in other folders)
